--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = "1.0.86"
+clap = { version = "4.5.9", features = ["derive"] }
+env_logger = "0.11.3"
+log = "0.4.22"
+rocket = "0.5.1"
+serde = { version = "1.0.204", features = ["derive"] }
+serde_json = "1.0.120"
